Made the x of the skip button a ::before pseudo element instead of being in the actual skip button element

--- a/video.css
+++ b/video.css
@@ -19,6 +19,9 @@
 		text-align:center;
 		font-size:30px;
 	}
+		.video-player-wrapper .video-player-skip::before {
+			content:'x';
+		}
 .video-player {
 	position:absolute;
 	overflow:hidden;
